Fix question submission spacing

--- a/app/frontend/Experiences/Question/Question.module.scss
+++ b/app/frontend/Experiences/Question/Question.module.scss
@@ -8,6 +8,9 @@
 
 .fieldset {
   border: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .legend,
